# QuizIQHub-main

./: README.md
quiz_backend/: pyproject.toml
quiz_backend/quiz_backend/: route.py  setting.py
quiz_backend/quiz_backend/controllers/: admin_controllers.py  auth_controllers.py  quiz_controllers.py  user_controllers.py
quiz_backend/quiz_backend/controllers/openai_apis/: question_generate.py
quiz_backend/quiz_backend/db/: db_connector.py
quiz_backend/quiz_backend/helper/: openai_client.py
quiz_backend/quiz_backend/models/: admin_models.py  quiz_models.py  user_models.py
quiz_backend/quiz_backend/utils/: exception.py  imports.py  types.py
quiz_frontend/: next.config.mjs  package-lock.json  package.json
quiz_frontend/src/app/: page.tsx
quiz_frontend/src/app/(auth)/login/: page.tsx
quiz_frontend/src/app/(auth)/register/: page.tsx
quiz_frontend/src/components/layout/: Button.tsx
quiz_frontend/src/lib/utils/: types.tsx
